[workspace]
members = [
    "main",

    "zenis_common",
    "zenis_macros",
    "zenis_discord",
    "zenis_commands",
    "zenis_database",
    "zenis_data",
    "zenis_ai",
    "zenis_payment",
]
resolver = "2"

[profile.dev] 
opt-level = 1

[workspace.dependencies]
serde = "1.0.197"
serde-aux = "4.5.0"
serde_json = "1.0.114"
anyhow = "1.0.75"
bson = { version = "2.9.0", features = ["chrono-0_4"] }
rand = "0.8.5"
async-trait = "0.1.77"
chrono = "0.4.31"
image = "0.24.9"
tokio = "1.36.0"
tokio-stream = "0.1.14"
once_cell = "1.19"
unidecode = "0.3"
reqwest = { version = "0.11.24", features = ["json"] }