[workspace]
members = [
    "main",

    "zenis_common",
    "zenis_macros",
    "zenis_discord",
    "zenis_commands",
    "zenis_database",
    "zenis_data",
    "zenis_ai",
    "zenis_payment",
]
resolver = "2"

[profile.dev] 
opt-level = 1

[workspace.dependencies]
serde = "1.0.219"
serde-aux = "4.7.0"
serde_json = "1.0.140"
anyhow = "1.0.98"
bson = { version = "2.15.0", features = ["chrono-0_4"] }
rand = "0.9.1"
async-trait = "0.1.88"
chrono = "0.4.41"
image = "0.25.6"
tokio = "1.46.0"
tokio-stream = "0.1.17"
once_cell = "1.21.3"
unidecode = "0.3"
reqwest = { version = "0.12.22", features = ["json"] }