[package]
name = "zenis_commands"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
zenis_framework = { path = "../zenis_framework" }
zenis_discord = { path = "../zenis_discord" }
zenis_macros = { path = "../zenis_macros" }
zenis_common = { path = "../zenis_common" }
zenis_data = { path = "../zenis_data" }
zenis_database = { path = "../zenis_database" }
zenis_ai = { path = "../zenis_ai" }
zenis_payment = { path = "../zenis_payment" }

async-trait = { workspace = true }
anyhow = { workspace = true }
chrono = { workspace = true }
serde_json = { workspace = true }
rand = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }

once_cell = "1.21.3"
unidecode = "0.3"