[package]
name = "zenis_common"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = { workspace = true }
serde = { workspace = true }
once_cell = { workspace = true }
image = { workspace = true }
unidecode = { workspace = true }
lru = "0.12"