[package]
name = "zenis_data"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
zenis_common = { path = "../zenis_common" }
zenis_discord = { path = "../zenis_discord" }
zenis_macros = { path = "../zenis_macros" }

bson = { workspace = true }
serde = { workspace = true }
once_cell = { workspace = true }
rand = { workspace = true }