[package]
name = "zenis_discord"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
zenis_common = { path = "../zenis_common" }
twilight-gateway = "0.16.0"
twilight-http = "0.16.0"
twilight-model = "0.16.0"
twilight-standby = "0.16.0"

tokio-stream = "0.1.17"
trait-set = "0.3.0"

anyhow = { workspace = true }
async-trait = { workspace = true }
chrono = { workspace = true }