[package]
name = "zenis_framework"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
zenis_common = { path = "../zenis_common" }
zenis_discord = { path = "../zenis_discord" }
zenis_database = { path = "../zenis_database" }
zenis_data = { path = "../zenis_data" }
zenis_ai = { path = "../zenis_ai" }
zenis_payment = { path = "../zenis_payment" }

anyhow = { workspace = true }
async-recursion = "1.0.5"
async-trait = { workspace = true }
serde_json = { workspace = true }
rand = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }
reqwest = { workspace = true }
base64 = "0.22"